[gd_scene load_steps=20 format=1]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://scripts/felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=10]
[ext_resource path="res://scenes/cano.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/gerador.gd" type="Script" id=12]
[ext_resource path="res://assets/font120.fnt" type="BitmapFont" id=13]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=4]

resource/name = "BackAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 519.531, 862.107 ), Vector2( -510, 862.107 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1544.68, 861.161 ), Vector2( 510, 861.161 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 106.963

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( -2.79508, 0.211038 )
b = Vector2( 32.151, 0.15419 )

[node name="GameNode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnim = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackAnim"

[node name="Sprite1" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 511.974, 867.269 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 1534.51, 871.486 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )

[node name="Felpudo" type="RigidBody2D" parent="."]

transform/pos = Vector2( 193.85, 133.429 )
transform/scale = Vector2( 1.4, 1.4 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 0.875695, 0, 0, 0.578289, 154.904, 265.417 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 13.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]

transform/pos = Vector2( 151.101, 270.905 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]

transform/pos = Vector2( 154.904, 265.417 )
transform/scale = Vector2( 0.875695, 0.578289 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="SomVoa" type="StreamPlayer" parent="Felpudo"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Limites" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 28.6721, 0, 0, 11.8111, 80.4988, -0.294571 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 28.6721, 0, 0, 11.8111, 80.4988, 1701.56 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 80.4988, -0.294571 )
transform/scale = Vector2( 28.6721, 11.8111 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 80.4988, 1701.56 )
transform/scale = Vector2( 28.6721, 11.8111 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 1

[node name="Canos" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -165.194, 15.4869 )
z/z = 2

[node name="Cano" parent="Canos" instance=ExtResource( 11 )]

transform/pos = Vector2( 1346.57, 564.132 )
transform/scale = Vector2( 0.975238, 1.04498 )

[node name="Gerador" type="Position2D" parent="Canos"]

editor/display_folded = true
transform/pos = Vector2( 1122.69, 574.511 )
transform/scale = Vector2( 5.37626, -5.42043 )
script/script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="TimerToReplay" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="Control" type="Control" parent="Node2D"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 139.0
margin/right = 992.0
margin/bottom = 268.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SomScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]

[connection signal="timeout" from="TimerToReplay" to="." method="_on_TimerToReplay_timeout"]


